--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -1,11 +1,11 @@
 {
   "metas": [
     {
-      "id": "tt9307686",
+      "id": "tt31173579",
       "type": "series",
       "name": "Fire Force Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx149118-AOQb0xuTssGl.jpg",
-      "description": "Genres: Action, Drama, Sci-Fi, Supernatural\nTags:Post-Apocalyptic/Cult/Super Power/Shounen/Demons/Religion/Dystopian/Lost Civilization/Primarily Adult Cast/Urban/Ensemble Cast/Male Protagonist/Firefighters/Gods/Urban Fantasy/Nun/Guns\nThe third season of <i>Enen no Shouboutai</i>.<br><br>\nBranded as traitors, Shinra and Company 8 fight alone to save Obi and stop the Evangelist!<br><br>\n(Source: Crunchyroll News)"
+      "description": "Genres: Action, Drama, Sci-Fi, Supernatural\nTags:Post-Apocalyptic/Cult/Super Power/Shounen/Demons/Religion/Dystopian/Lost Civilization/Primarily Adult Cast/Urban/Ensemble Cast/Male Protagonist/Firefighters/Gods/Urban Fantasy/Nun/Guns/Rescue\nThe third season of <i>Enen no Shouboutai</i>.<br><br>\nBranded as traitors, Shinra and Company 8 fight alone to save Obi and stop the Evangelist!<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt29605391",
@@ -29,11 +29,11 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Isekai/Male Protagonist\nAfter a mysterious death, King Grey is reborn as Arthur Leywin on the magical continent of Dicathen. Although he enters his second life as a baby, his previous wisdom remains. He begins to master magic and forge his own path as the years go by, seeking to correct the mistakes of his past life. \n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt13248062",
+      "id": "tt35315028",
       "type": "series",
       "name": "I've Been Killing Slimes For 300 Years And Maxed Out My Level Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-2uPE0ywVcz9X.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Dragons\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Dragons/Found Family\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
     },
     {
       "id": "tt33349897",
@@ -57,18 +57,18 @@
       "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Nudity/Femdom/Large Breasts/Heterosexual/Tsundere/Bullying/Slavery/Female Protagonist/School/Male Protagonist/Shounen\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
     },
     {
-      "id": "tt16341212",
-      "type": "series",
-      "name": "Aharen-san wa Hakarenai Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179979-OiIKSkhJRmvo.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Kuudere/Shounen/School/Surreal Comedy/Slapstick/Male Protagonist/Female Protagonist/Primarily Teen Cast/Episodic/Heterosexual\nThe second season of <i>Aharen-san wa Hakarenai</i>."
-    },
-    {
       "id": "tt33165027",
       "type": "series",
       "name": "WITCH WATCH",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180367-GlRuB2lG7Kaa.jpg",
       "description": "Genres: Comedy, Drama, Fantasy, Romance, Slice of Life\nTags:Magic/Witch/Shounen/Female Protagonist/Parody/Male Protagonist/Found Family/Heterosexual/Primarily Teen Cast/Urban Fantasy/Werewolf/Youkai\nMorihito Otogi, a high school student who comes from a lineage of ogres, enjoys a peaceful, ordinary life until his childhood friend, Nico, moves in with him. Nico is a witch-in-training, and chooses Morihito to be her familiar. While Nico is thrilled to reunite with her old friend and crush, Morihito is tasked with the perilous duty to protect her from a foretold calamity. Between the unpredictable chaos caused by Nico’s magic, and the awkwardness of sharing a home, their lives become a whirlwind of supernatural hijinks and threats.\n<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>WITCH WATCH: WATCH PARTY</b> before the Japanese premiere was pre-screened in advance in theaters on March 16, 2025 in North America by GKIDS Films and March 22 and 23 in Europe by Animation Digital Network. <br>\n- Episodes 1-2 + a selection of stories (Cat Scout, Kanshi's Part Time Job Diaries ~ The Side Job ~, and Kan & Nico's Channel) was pre-screened in advance in theaters on March 30, 2025 in Japan. The regular TV broadcast began April 6, 2025.</i>"
+    },
+    {
+      "id": "tt16341212",
+      "type": "series",
+      "name": "Aharen-san wa Hakarenai Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179979-OiIKSkhJRmvo.jpg",
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Kuudere/Shounen/School/Surreal Comedy/Slapstick/Male Protagonist/Female Protagonist/Primarily Teen Cast/Episodic/Heterosexual\nThe second season of <i>Aharen-san wa Hakarenai</i>."
     },
     {
       "id": "tt28082379",
@@ -148,18 +148,18 @@
       "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Rural/Male Protagonist/Coming of Age/Shrine Maiden/Kuudere/Tsundere/Table Tennis/Fishing/Swimming/Food\nTo help manage his recently deceased grandmother's effects, the protagonist Takahara Hairi travels to Torishirojima during his summer vacation.<br><br>\n\nAs he gets off the ferry boat, he spots a lone girl standing on the pier.<br><br>\n\nA girl who simply gazes into the distance as her long hair flutters in the wind.<br><br>\n\nHe looks at the girl in utter bewilderment, but before he realizes it, she can no longer be found anywhere.<br><br>\n\nHairi finds himself starting to adjust to life on this island, surrounded by nature far lusher than anything he has ever come across back in the city.<br><br>\n\nTime seems to flow by casually on this island, and as it does, memories of something nostalgic keep coming back to him...<br><br>\n\nMemories of something he had long forgotten.<br><br>\n\n(Source: Key)"
     },
     {
-      "id": "tt35437763",
-      "type": "series",
-      "name": "Chotto dake Ai ga Omoi Dark Elf ga Isekai kara Oikakete Kita",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180829-jHViG8fIkaIJ.jpg",
-      "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual/Isekai\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
-    },
-    {
       "id": "tt20672482",
       "type": "series",
       "name": "Moonrise",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-AYFOHaZIQkCI.png",
       "description": "Genres: Action, Fantasy, Sci-Fi\nTags:CGI/Space/Male Protagonist\n In a not-too-distant future, humanity has established a loosely organized world government with everything managed by an international AI network called Sapientia. People live peaceful lives by loyally obeying its rational decisions. However, Sapientia’s lunar development project, which sends criminals and pollutants to the Moon to maintain Earth’s peace, creates disparity and poverty on the Moon, sparking a catalyst for war. Jacob \"Jack\" Shadow gets caught up in this conflict after losing his family to a terrorist bombing by the Moon's rebel army. Vowing revenge, Jack joins the Earth army as a scout on the Moon, only to discover an unexpected leader among the resistance forces. <br><br>\n(Source: Netflix)"
+    },
+    {
+      "id": "tt35437763",
+      "type": "series",
+      "name": "Chotto dake Ai ga Omoi Dark Elf ga Isekai kara Oikakete Kita",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180829-jHViG8fIkaIJ.jpg",
+      "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual/Isekai\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt32513973",
@@ -187,7 +187,7 @@
       "type": "series",
       "name": "Apocalypse Hotel",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180675-YEwsxiMsnyvL.png",
-      "description": "Genres: \nTags:Post-Apocalyptic/Inn/Robots/Urban/Aliens/Artificial Intelligence\nThe earth where mankind has disappeared and civilization has collapsed.<br><br>\nIn a world of ruined towns and revived nature, one historic hotel remains.<br><br>\n\"0 customers currently staying, 0 customers planning to stay today, 0 homepage views yesterday. Goal not reached.”<br><br>\nThis is the story that unfolds in a hotel where humanity has disappeared.<br><br>\n(Official Website, Translated)"
+      "description": "Genres: \nTags:Post-Apocalyptic/Inn/Robots/Urban/Aliens/Artificial Intelligence/Anthropomorphism\nThe earth where mankind has disappeared and civilization has collapsed.<br><br>\nIn a world of ruined towns and revived nature, one historic hotel remains.<br><br>\n\"0 customers currently staying, 0 customers planning to stay today, 0 homepage views yesterday. Goal not reached.”<br><br>\nThis is the story that unfolds in a hotel where humanity has disappeared.<br><br>\n(Official Website, Translated)"
     },
     {
       "id": "tt32779862",
@@ -218,6 +218,13 @@
       "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
+      "id": "kitsu:49069",
+      "type": "series",
+      "name": "Lycoris Recoil: Friends are thieves of time.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
+      "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
+    },
+    {
       "id": "tt34702901",
       "type": "series",
       "name": "Anne Shirley",
@@ -230,13 +237,6 @@
       "name": "The Unaware Atelier Meister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-SSeg5j1UrMDG.png",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)"
-    },
-    {
-      "id": "tt16755706",
-      "type": "series",
-      "name": "Lycoris Recoil: Friends are thieves of time.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
-      "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
     },
     {
       "id": "tt36270030",
@@ -309,21 +309,14 @@
       "description": "Genres: Mystery, Psychological, Supernatural\nTags:Shounen\nOur setting is in Tokyo in 1948, just right after the war. Kanna Kusakabe had just become a second-year at a high school when she meets the new language teacher, Akihiko Chuuzenji.<br><br>\n\nMysterious supernatural things keep happening around Kanna. Once again today, Kanna is going to open the doors to the library prep room to seek help from the surly Chuuzenji-sensei who is waiting inside.<br><br>\n\nA high school supernatural mystery featuring the unlikely duo between a teacher and a high school girl is about to begin!<br><br>\n\n(Source: Pony Canyon, edited)"
     },
     {
-      "id": "tt13835440",
+      "id": "tt35994065",
       "type": "series",
       "name": "Catch Me at the Ballpark!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184279-dw02k4DPxwGz.png",
       "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36156863",
-      "type": "series",
-      "name": "cocoon: Aru Natsu no Shoujo-tachi Yori",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166527-0sPHL9124m39.jpg",
-      "description": "Genres: Drama\nTags:Josei/War/Female Protagonist/Historical/Primarily Female Cast/Rural/Survival/Primarily Teen Cast\nSan and Mayu are two schoolgirls living in Okinawa during the closing months of the Pacific War. Together with their classmates, the two friends are drafted into the war effort as nurses for wounded soldiers. When ordered to die for their country, the remaining members of the group escape only to face the harsh environment of a tropical paradise that has become a hellish battlefield."
-    },
-    {
-      "id": "tt36041841",
+      "id": "tt36269978",
       "type": "series",
       "name": "Food for the Soul",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-8ubOPQA3DyH8.jpg",
@@ -335,6 +328,13 @@
       "name": "The Gorilla God’s Go-To Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182060-r0ihNqhiyvpT.jpg",
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist/Shoujo\nSophia, a timid daughter of a count, just wanted a peaceful life, but the Gorilla God had other plans. Blessed with unmatched strength, she’s thrust into the Royal Knight Order, turning her quiet days into chaos. Now, she must juggle school, the knight life, and her overwhelming power. Who knew gorilla strength could be so complicated?<br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt36156863",
+      "type": "series",
+      "name": "cocoon: Aru Natsu no Shoujo-tachi Yori",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166527-PEGsT8PmTMWL.png",
+      "description": "Genres: Drama\nTags:Josei/War/Female Protagonist/Historical/Primarily Female Cast/Rural/Survival/Primarily Teen Cast\nSan and Mayu are two schoolgirls living in Okinawa during the closing months of the Pacific War. Together with their classmates, the two friends are drafted into the war effort as nurses for wounded soldiers. When ordered to die for their country, the remaining members of the group escape only to face the harsh environment of a tropical paradise that has become a hellish battlefield."
     },
     {
       "id": "tt28400589",
