--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -38,7 +38,7 @@
     {
       "id": "tt33349897",
       "type": "series",
-      "name": "Kono Subarashii Sekai ni Shukufuku wo! 3: BONUS STAGE",
+      "name": "KONOSUBA -God's Blessing on This Wonderful World! 3 -BONUS STAGE-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181244-ICHU0FzIhEAY.jpg",
       "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Chuunibyou/Gods/Isekai/Male Protagonist/Ensemble Cast/Primarily Female Cast\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Redstream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Beware of imposters!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025.</i>"
     },
@@ -124,7 +124,7 @@
       "type": "series",
       "name": "Mobile Suit Gundam GQuuuuuuX",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185213-RKQN0qxKlqd6.jpg",
-      "description": "Genres: Drama, Mecha, Sci-Fi\nTags:Female Protagonist/Robots/Real Robot/Space/Cyberpunk/Super Robot/Fugitive\nAmate Yuzuriha is a high-school student living peacefully in a space colony floating in outer space.<br><br>\nWhen she meets a war refugee named Nyaan, Amate is drawn into the illegal mobile suit dueling sport known as Clan Battle.<br><br>\nUnder the entry name \"Machu,\" she throws herself into fierce battle day after day, piloting the GQuuuuuuX. Then an unidentified Gundam mobile suit pursued by both the space force and the police appears before her, along with its pilot, a boy named Shuji.<br><br>\nNow their world is about to enter a new era.<br><br>\n(Source: Official Site)<br><br>\n<i>Note: Prior to broadcasting, \"Mobile Suit Gundam GQuuuuuuX -Beginning-\" — a theatrical pre-screening of the first 3 episodes edited together— debuted in Japan on January 17, 2025 and in North America on February 28, 2025.</i>"
+      "description": "Genres: Drama, Mecha, Sci-Fi\nTags:Female Protagonist/Real Robot/Space/Cyberpunk/Robots/Super Robot/Fugitive\nAmate Yuzuriha is a high-school student living peacefully in a space colony floating in outer space.<br><br>\nWhen she meets a war refugee named Nyaan, Amate is drawn into the illegal mobile suit dueling sport known as Clan Battle.<br><br>\nUnder the entry name \"Machu,\" she throws herself into fierce battle day after day, piloting the GQuuuuuuX. Then an unidentified Gundam mobile suit pursued by both the space force and the police appears before her, along with its pilot, a boy named Shuji.<br><br>\nNow their world is about to enter a new era.<br><br>\n(Source: Official Site)<br><br>\n<i>Note: Prior to broadcasting, \"Mobile Suit Gundam GQuuuuuuX -Beginning-\" — a theatrical pre-screening of the first 3 episodes edited together— debuted in Japan on January 17, 2025 and in North America on February 28, 2025.</i>"
     },
     {
       "id": "tt30844357",
@@ -134,18 +134,18 @@
       "description": "Genres: Mystery, Slice of Life\nTags:Detective\nThe second season of <i>Shoushimin Series.</i><br><br>\nThe second season will focus on two new cases from the novel series, adapting the two-part third volume Shuuki Gentei Kuri Kinton Jiken (The Autumn-Exclusive Kuri Kinton Case) and the fifth volume Touki Gentei Bonbon Chocolat Jiken (The Winter-Exclusive Chocolate Bonbons Case).<br><br>\n(Source: MyAnimeList)"
     },
     {
-      "id": "tt35636186",
-      "type": "series",
-      "name": "Black Butler: Emerald Witch Arc",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-HmN0Za4T157B.jpg",
-      "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i><br><br>\n\nCiel and his loyal butler Sebastian brave a cursed forest in Germany to uncover the truth behind eerie deaths.<br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt16741414",
       "type": "series",
       "name": "Summer Pockets",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143200-42OaDCS6VEy3.png",
       "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Rural/Male Protagonist/Coming of Age/Shrine Maiden/Kuudere/Tsundere/Table Tennis/Fishing/Swimming/Food\nTo help manage his recently deceased grandmother's effects, the protagonist Takahara Hairi travels to Torishirojima during his summer vacation.<br><br>\n\nAs he gets off the ferry boat, he spots a lone girl standing on the pier.<br><br>\n\nA girl who simply gazes into the distance as her long hair flutters in the wind.<br><br>\n\nHe looks at the girl in utter bewilderment, but before he realizes it, she can no longer be found anywhere.<br><br>\n\nHairi finds himself starting to adjust to life on this island, surrounded by nature far lusher than anything he has ever come across back in the city.<br><br>\n\nTime seems to flow by casually on this island, and as it does, memories of something nostalgic keep coming back to him...<br><br>\n\nMemories of something he had long forgotten.<br><br>\n\n(Source: Key)"
+    },
+    {
+      "id": "tt35636186",
+      "type": "series",
+      "name": "Black Butler: Emerald Witch Arc",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-HmN0Za4T157B.jpg",
+      "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i><br><br>\n\nCiel and his loyal butler Sebastian brave a cursed forest in Germany to uncover the truth behind eerie deaths.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt20672482",
@@ -157,7 +157,7 @@
     {
       "id": "tt35437763",
       "type": "series",
-      "name": "Chotto dake Ai ga Omoi Dark Elf ga Isekai kara Oikakete Kita",
+      "name": "Yandere Dark Elf: She Chased Me All the Way From Another World!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180829-jHViG8fIkaIJ.jpg",
       "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual/Isekai\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
     },
@@ -173,7 +173,7 @@
       "type": "series",
       "name": "I'm the Evil Lord of an Intergalactic Empire!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-zqrwevS4PBJF.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist/Female Harem/Isekai/Space/Politics/Maids\nIn his last life, Liam lived as a moral, responsible person...but died deep in debt and betrayed by his wife. Reborn into the ruling family of a vast interstellar empire, Liam knows that life is divided into the downtrodden and the ones who do the stomping, so this time he's going to take what he wants and live for himself. But somehow, things refuse to work out that way. Despite doing his best to become a tyrant, Liam's decisions lead to nothing but peace and prosperity for the empire under his rule, and he just gets more and more popular!\n<br><br>\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist/Female Harem/Isekai/Space/Politics/Maids\nAfter a life of honesty left him betrayed, Liam is reborn into a vast interstellar empire with one goal: be the galaxy’s worst evil lord. But no matter how hard he tries to be a tyrant, his “wicked” plans keep backfiring into peace, prosperity, and adoring fans. Galactic chaos, magic, and mecha await in this hilariously misconstructed tale of a villain who can’t help but to impress.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35436553",
@@ -208,14 +208,7 @@
       "type": "series",
       "name": "ZatsuTabi -That's Journey-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-qwVP0w5NIaBW.jpg",
-      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Seinen\nWhen aspiring manga artist Chika’s storyboards get rejected, she ditches her desk for an adventure! Armed with a quirky social media poll, she sets off on a spontaneous journey of random crowdsourced destinations. From hilarious mishaps to heartwarming encounters, Chika discovers inspiration, friendship, and herself, one unpredictable stop at a time.<br><br>\n\n(Source: Crunchyroll)\n\n<br><br>\n<i>Note: Based on the real life travels of mangaka Chika Suzugamori.</i>"
-    },
-    {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
+      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Primarily Female Cast/Seinen\nWhen aspiring manga artist Chika’s storyboards get rejected, she ditches her desk for an adventure! Armed with a quirky social media poll, she sets off on a spontaneous journey of random crowdsourced destinations. From hilarious mishaps to heartwarming encounters, Chika discovers inspiration, friendship, and herself, one unpredictable stop at a time.<br><br>\n\n(Source: Crunchyroll)\n\n<br><br>\n<i>Note: Based on the real life travels of mangaka Chika Suzugamori.</i>"
     },
     {
       "id": "kitsu:49069",
@@ -223,6 +216,13 @@
       "name": "Lycoris Recoil: Friends are thieves of time.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
       "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
       "id": "tt34702901",
@@ -241,7 +241,7 @@
     {
       "id": "tt36270030",
       "type": "series",
-      "name": "Kakushite! Makina-san!!",
+      "name": "Makina-san's a Love Bot?!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177509-LzpyXGnjitvF.jpg",
       "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
     },
@@ -309,18 +309,18 @@
       "description": "Genres: Mystery, Psychological, Supernatural\nTags:Shounen\nOur setting is in Tokyo in 1948, just right after the war. Kanna Kusakabe had just become a second-year at a high school when she meets the new language teacher, Akihiko Chuuzenji.<br><br>\n\nMysterious supernatural things keep happening around Kanna. Once again today, Kanna is going to open the doors to the library prep room to seek help from the surly Chuuzenji-sensei who is waiting inside.<br><br>\n\nA high school supernatural mystery featuring the unlikely duo between a teacher and a high school girl is about to begin!<br><br>\n\n(Source: Pony Canyon, edited)"
     },
     {
-      "id": "tt35994065",
-      "type": "series",
-      "name": "Catch Me at the Ballpark!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184279-dw02k4DPxwGz.png",
-      "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt36269978",
       "type": "series",
       "name": "Food for the Soul",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-8ubOPQA3DyH8.jpg",
       "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
+    },
+    {
+      "id": "tt35994065",
+      "type": "series",
+      "name": "Catch Me at the Ballpark!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184279-dw02k4DPxwGz.png",
+      "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt4561040",
